background color, start eventlistener with a button

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ToDoList</title>
+    <link href="mainstyles.css" rel="stylesheet">
 </head>
 <body>
+    <header> ToDoList </header>
+    <div class="container">
+        <div id="todo-list">
+            <button id="add-todo"> Add a list </button>
+        </div>
+        <div id="progress-list">
+            <button id="add-progress"> Add a list </button>
+        </div>
+        <div id="finish-list">
+            <button id="add-finish"> Add a list </button>
+        </div>
 
+    </div>
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
