two div and new idea for todo list

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
             </ul>
         </div>
-        <div id="progress-list">
-            <button id="add-progress"> Add a list </button>
-        </div>
         <div id="finish-list">
-            <button id="add-finish"> Add a list </button>
-        </div>
+            <ul id="ul-finish">
 
+            </ul>
+        </div>
     </div>
 
     <script type="text/javascript" src="main.js"></script>
