--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <link href="mainstyles.css" rel="stylesheet">
 </head>
 <body>
-    <header> ToDoList </header>
-    <div class="container">
-        <div id="todo-list">
-            <input type="text" id="todo-input" placeholder="Things to do..." autocomplete="off" autofocus>
-            <span onclick="addElement()" class="addButton">Add</span>
-            <ul id="ul-list">
+<header> ToDoList</header>
+<div class="container">
+    <div id="todo-list">
+        <h2> ToDo</h2>
+        <input type="text" id="todo-input" placeholder="Things to do..." autocomplete="off" autofocus>
+        <span onclick="addElement()" class="addButton">Add</span>
+        <ul id="ul-list">
 
-            </ul>
-        </div>
-        <div id="finish-list">
-            <ul id="ul-finish">
-
-            </ul>
-        </div>
+        </ul>
     </div>
+    <div id="finish-list">
+        <h2> Finish Task</h2>
+        <ul id="ul-finish">
 
-    <script type="text/javascript" src="main.js"></script>
+        </ul>
+    </div>
+</div>
+
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
