after creating and load localStorage, before bug fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>ToDoList</title>
     <link href="mainstyles.css" rel="stylesheet">
 </head>
-<body>
+<body id="body">
 <header> ToDoList</header>
 <div class="container">
     <div id="todo-list">
